    underlying support in the Linux kernel.

4)  Supplying an interface name in the SOURCE column of
    /etc/shorewall/masq is now deprecated. Entering the name of an
    interface there will result in a compile-time warning:

    WARNING: Using an interface as the masq SOURCE requires the
             interface to be up and configured when Shorewall
             starts/restarts

----------------------------------------------------------------------------
          P R O B L E M S   C O R R E C T E D   I N   4 . 3 . 10
----------------------------------------------------------------------------

1.  When Shorewall could not determine the MAC address of of a gateway
    router where multiple providers are configured through the same
    interface, invalid iptables-restore input was generated. This
    resulted in an error message similar to the following:

        iptables-restore v1.3.5: Bad mac address `-j'

2.  Previously, Shorewall has treated traffic shaping class IDs as
    decimal numbers (or pairs of decimal numbers). That worked fine
    until IPMARK was implemented. IPMARK requires Shorewall to generate
    class Ids in numeric sequence. In 4.3.9, that didn't work correctly
    because Shorewall was generating the sequence "..8,9,10,11..." when
    the correct sequence was "...8,9,a,b,...". Shorewall now treats
    class IDs as hex, like 'tc' and 'iptables' do.

----------------------------------------------------------------------------
             K N O W N   P R O B L E M S   R E M A I N I N G
----------------------------------------------------------------------------

None.

----------------------------------------------------------------------------
                N E W   F E A T U R E S   I N   4 . 3 . 10
----------------------------------------------------------------------------

1)  The change that implemented IPMARK support in 4.3.9 resulted in a
    lack of upward compatibility which could break some