@@ -63,6 +63,9 @@ released late in 2009.
              interface to be up and configured when Shorewall
              starts/restarts
 
+    To avoid this warning, replace interface names by the corresponding
+    network addresses (e.g., 192.168.144.0/24).
+
 ----------------------------------------------------------------------------
           P R O B L E M S   C O R R E C T E D   I N   4 . 3 . 10
 ----------------------------------------------------------------------------
